# course-platform

./: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
accounts/: models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_model.py
config/: settings.py
