[tool.poetry]
name = "a"
version = "0.1.0"
description = "a"
authors = ["a@a.com"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"
pillow = "^9.3.0"
pytest = "^7.2.0"
django-pytest = "^0.2.0"
pytest-django = "^4.5.2"
django-factory-boy = "^1.0.0"
faker = "^15.3.4"
pytest-factoryboy = "^2.5.1"
drf-yasg = "^1.21.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
